Fixed bug with paths
