# swagger.yaml
@@ -150,7 +150,7 @@ paths:
           description: "Config Group deleted"
         404:
           description: "Config Group not found"
-  /config/configGroup/:
+  /config/configGroup/{groupName}/{groupVersion}/:
     post:
       summary: "Add a config to a group"
       operationId: "addToConfigGroup"
@@ -164,23 +164,24 @@ paths:
           required: true
           type: string
           description: Unique key to ensure idempotency of the request
+        - name: "groupName"
+          in: path
+          description: "Name of the config group"
+          required: true
+          type: string
+        - name: "groupVersion"
+          in: path
+          description: "Version of the config group"
+          required: true
+          type: number
+          format: float
         - in: "body"
           name: "configForGroup"
           description: "ConfigForGroup object that needs to be added"
           required: true
           schema:
             $ref: "#/definitions/ConfigForGroup"
-        - name: "groupName"
-          in: "query"
-          description: "Name of the config group"
-          required: true
-          type: "string"
-        - name: "groupVersion"
-          in: "query"
-          description: "Version of the config group"
-          required: true
-          type: "number"
-          format: "float"
+
       responses:
         201:
           description: "ConfigForGroup created"
